[metadata]
name = transfer_linkage
version = 0.0.0a1
author = David Wu
author_email = david.wu1@monash.edu
description = Hospital Transfer Data Cleaner
url = https://github.com/dwu0042/transfer_linkage
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy >= 1.19.0
    scipy >= 1.5.2
    polars >= 0.16.16

[options.extras_require]
test = pytest